--- a/src/Renderer/App.css
+++ b/src/Renderer/App.css
@@ -23,9 +23,15 @@
     overflow-x: hidden;
 }
 
+.app .title {
+    white-space: pre;
+    text-align: center;
+    line-height: 2;
+}
+
 .app .gridBody {
     display: grid;
-    grid-template-columns: repeat(4, minmax(160px, auto));
+    grid-template-columns: repeat(3, minmax(120px, auto)) 120px;
     column-gap: 40px;
     row-gap: 10px;
     padding: 20px;
