--- a/public/style.css
+++ b/public/style.css
@@ -90,5 +90,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    line-height: 1.25;
     background-color: black;
 }
