--- a/public/style.css
+++ b/public/style.css
@@ -87,10 +87,21 @@ a:active {
 
 body {
     max-width: 100vw;
+    max-height: 100vh;
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     line-height: 1.25;
-    background-color: black;
+
+    --c1: rgb(0, 16, 32, 0.5);
+    --c2: rgb(0, 8, 16, 0.75);
+
+    background-color: var(--clr-primary-bkg);
+    background-image: radial-gradient(transparent 33%, var(--c1)), radial-gradient(transparent 10%, var(--c2));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    overflow-x: hidden;
 }
