--- a/src/Renderer/App.css
+++ b/src/Renderer/App.css
@@ -1,37 +1,18 @@
 .app {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(auto, 960px));
     justify-content: center;
-    align-items: center;
     gap: 40px;
     max-width: 100vw;
     min-height: 100vh;
     padding: 40px;
-
-    --c1: rgb(0, 16, 32, 0.5);
-    --c2: rgb(0, 8, 16, 0.75);
-
-    background-color: var(--clr-primary-bkg);
-    background-image: radial-gradient(transparent 33%, var(--c1)), radial-gradient(transparent 10%, var(--c2));
-    background-position: center center;
-    background-size: cover;
-
     color: var(--clr-page-text-light);
     transition: opacity var(--anim-duration);
     opacity: 1;
-    overflow-x: hidden;
 }
 
-.app .title {
-    white-space: pre;
-    text-align: center;
-    line-height: 2;
-}
-
-.app .gridBody {
-    display: grid;
-    column-gap: 40px;
-    row-gap: 10px;
+.app .panel {
+    width: 100%;
     padding: 20px;
     border-radius: 10px;
     border: 2px solid var(--clr-primary-text);
@@ -41,11 +22,45 @@
     overflow: hidden;
 }
 
+.app .title {
+    white-space: pre;
+    text-align: center;
+    font-size: 20px;
+    line-height: 2;
+}
+
+.app .filters {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.app .filters .option,
+.app .filters .range {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.app .gridBody {
+    display: grid;
+    column-gap: 40px;
+    row-gap: 10px;
+}
+
 .app .gridBody.combos {
     grid-template-columns: repeat(3, minmax(120px, auto)) repeat(3, minmax(40px, auto)) 120px;
 }
 
-.app .gridBody.scores {
+.app .gridBody.scores.brief {
+    grid-template-columns: repeat(3, minmax(120px, auto));
+}
+
+.app .gridBody.scores.full {
     grid-template-columns: repeat(5, minmax(120px, auto));
 }
 
@@ -53,16 +68,19 @@
 }
 
 .app .gridCell.header {
+    text-transform: uppercase;
+    font-weight: bold;
+    user-select: none;
+}
+
+.app button.gridCell.header {
     appearance: none;
     padding: 0;
     margin: 0;
     border: none;
     cursor: pointer;
-    user-select: none;
     text-align: start;
-    text-transform: uppercase;
     font-size: inherit;
-    font-weight: bold;
     background: none;
     color: inherit;
 }
