--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@
 
 * {
     box-sizing: border-box;
-    scrollbar-color: var(--clr-primary-text) var(--clr-primary-bkg);
+    scrollbar-color: var(--clr-tertiary-text) var(--clr-tertiary-bkg);
     scrollbar-width: thin;
 }
 
@@ -56,21 +56,21 @@
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: var(--clr-primary-text);
+    background-color: var(--clr-tertiary-text);
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--clr-primary-text);
+    background-color: var(--clr-tertiary-text);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--clr-primary-text);
-    box-shadow: inset 0 0 0 1px var(--clr-primary-bkg);
+    background-color: var(--clr-tertiary-text);
+    box-shadow: inset 0 0 0 1px var(--clr-tertiary-bkg);
     transition: background-color var(--anim-duration);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--clr-primary-highlight);
+    background-color: var(--clr-tertiary-highlight);
 }
 
 a,
@@ -94,10 +94,10 @@ body {
     font-size: 16px;
     line-height: 1.25;
 
-    --c1: rgb(0, 16, 32, 0.5);
-    --c2: rgb(0, 8, 16, 0.75);
+    --c1: rgba(8, 8, 32, 0.5);
+    --c2: rgba(0, 8, 16, 0.75);
 
-    background-color: var(--clr-primary-bkg);
+    background-color: var(--clr-tertiary-bkg);
     background-image: radial-gradient(transparent 33%, var(--c1)), radial-gradient(transparent 10%, var(--c2));
     background-position: center center;
     background-repeat: no-repeat;
