--- a/src/Renderer/App.css
+++ b/src/Renderer/App.css
@@ -1,6 +1,6 @@
 .app {
     display: grid;
-    grid-template-columns: repeat(1, minmax(auto, 960px));
+    grid-template-columns: minmax(auto, 960px);
     justify-content: center;
     gap: 40px;
     max-width: 100vw;
@@ -15,9 +15,9 @@
     width: 100%;
     padding: 20px;
     border-radius: 10px;
-    border: 2px solid var(--clr-primary-text);
+    border: 2px solid rgba(64, 64, 64, 0.25);
     background-color: rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(10px) grayscale(25%) brightness(50%);
+    backdrop-filter: blur(10px) grayscale(25%) brightness(75%);
     box-shadow: var(--shd-tiny), var(--shd-soft), var(--shd-medium);
     overflow: hidden;
 }
