--- a/src/Renderer/App.css
+++ b/src/Renderer/App.css
@@ -57,11 +57,11 @@
 }
 
 .app .gridBody.scores.brief {
-    grid-template-columns: repeat(3, minmax(120px, auto));
+    grid-template-columns: repeat(1, minmax(120px, auto)) repeat(4, minmax(60px, auto)) repeat(2, minmax(120px, auto));
 }
 
 .app .gridBody.scores.full {
-    grid-template-columns: repeat(5, minmax(120px, auto));
+    grid-template-columns: repeat(1, minmax(120px, auto)) repeat(4, minmax(120px, auto));
 }
 
 .app .gridCell {
@@ -78,7 +78,6 @@
     padding: 0;
     margin: 0;
     border: none;
-    cursor: pointer;
     text-align: start;
     font-size: inherit;
     background: none;
