--- a/public/style.css
+++ b/public/style.css
@@ -16,19 +16,17 @@
 
     --txt-size-check: 10px;
     --txt-size-small: 12px;
-    --txt-size-medium: 14px;
-    --txt-size-large: 16px;
-    --txt-size-extra: 20px;
+    --txt-size-medium: 16px;
+    --txt-size-large: 20px;
+    --txt-size-extra: 24px;
 
-    --shd-tiny: 0 2px 4px 1px rgba(0, 2, 4, 0.5);
-    --shd-soft: 0 4px 16px 2px rgba(0, 2, 4, 0.5);
-    --shd-medium: 0 8px 64px 4px rgba(0, 2, 4, 0.5);
+    --shd-tiny: 0 2px 4px 2px rgba(0, 0, 0, 0.33);
+    --shd-soft: 0 4px 16px 4px rgba(0, 0, 0, 0.5);
+    --shd-medium: 0 8px 64px 8px rgba(0, 0, 0, 0.66);
 
     --anim-duration: 0.5s;
 
     --scroll-width: 8px; /* FF "thin" */
-
-    --padding-body: 32px;
 
     --mobile-threshold: 600px;
 }
@@ -47,6 +45,10 @@
 }
 
 :focus {
+    outline: 0 none;
+}
+
+:focus-visible {
     outline: 2px solid var(--clr-secondary-highlight);
 }
 
@@ -81,7 +83,7 @@ button:hover {
 
 a,
 a:visited {
-    color: var(--clr-primary-text);
+    color: var(--clr-tertiary-text);
     text-decoration: none;
     outline-offset: 2px;
 }
@@ -96,6 +98,7 @@ body {
     max-height: 100vh;
     margin: 0;
     padding: 0;
+    color: var(--clr-page-text-light);
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     line-height: 1.25;
