--- a/src/Renderer/App.css
+++ b/src/Renderer/App.css
@@ -1,4 +1,4 @@
-.app {
+.app .content {
     display: grid;
     grid-template-columns: minmax(auto, 960px);
     justify-content: center;
@@ -6,99 +6,35 @@
     max-width: 100vw;
     min-height: 100vh;
     padding: 40px;
-    color: var(--clr-page-text-light);
-    transition: opacity var(--anim-duration);
-    opacity: 1;
 }
 
-.app .panel {
-    width: 100%;
+.app .navWrapper {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100vw;
     padding: 20px;
-    border-radius: 10px;
-    border: 2px solid rgba(64, 64, 64, 0.25);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
     background-color: rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(10px) grayscale(25%) brightness(75%);
+    backdrop-filter: blur(10px) grayscale(50%);
     box-shadow: var(--shd-tiny), var(--shd-soft), var(--shd-medium);
-    overflow: hidden;
 }
 
-.app .title {
-    white-space: pre;
-    text-align: center;
-    font-size: 20px;
-    line-height: 2;
-}
-
-.app .filters {
+.app .navWrapper > .nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     gap: 20px;
+    max-width: 960px;
 }
 
-.app .filters .option,
-.app .filters .range {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.app .gridBody {
-    display: grid;
-    column-gap: 40px;
-    row-gap: 10px;
-}
-
-.app .gridBody.combos {
-    grid-template-columns: repeat(3, minmax(120px, auto)) repeat(3, minmax(40px, auto)) 120px;
-}
-
-.app .gridBody.scores.brief {
-    grid-template-columns: repeat(1, minmax(120px, auto)) repeat(4, minmax(60px, auto)) repeat(2, minmax(120px, auto));
-}
-
-.app .gridBody.scores.full {
-    grid-template-columns: repeat(1, minmax(120px, auto)) repeat(4, minmax(120px, auto));
-}
-
-.app .gridCell {
-}
-
-.app .gridCell.header {
-    text-transform: uppercase;
-    font-weight: bold;
-    user-select: none;
-}
-
-.app button.gridCell.header {
-    appearance: none;
-    padding: 0;
-    margin: 0;
-    border: none;
-    text-align: start;
-    font-size: inherit;
-    background: none;
-    color: inherit;
-}
-
-.app .gridCell.desc {
-}
-
-.app .gridCell.Common {
-    color: peru;
-}
-
-.app .gridCell.Uncommon {
-    color: silver;
-}
-
-.app .gridCell.Rare {
-    color: gold;
-}
-
-.app .gridCell.Epic {
-    color: plum;
+.app .navWrapper > .nav a.active {
+    text-decoration: underline 2px;
 }
