--- a/src/Renderer/Components/SettingsGroup/SettingsGroup.css
+++ b/src/Renderer/Components/SettingsGroup/SettingsGroup.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 20px 40px;
 }
 
 .settingsGroup label {
