--- a/public/style.css
+++ b/public/style.css
@@ -81,6 +81,32 @@ button:hover {
     cursor: pointer;
 }
 
+label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    width: fit-content;
+}
+
+input {
+    color: var(--clr-page-text-light);
+    background-color: black;
+    box-shadow: var(--shd-tiny);
+    border: 2px solid rgb(from var(--clr-tertiary-text) r g b / 0.5);
+    padding: 5px;
+    font-size: 1em;
+    line-height: 1.25;
+}
+
+input[type="range"] {
+    width: 120px;
+}
+
+input[type="number"] {
+    width: 60px;
+}
+
 a,
 a:visited {
     color: var(--clr-tertiary-text);
