--- a/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
+++ b/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
@@ -9,6 +9,7 @@
     appearance: none;
     padding: 0;
     margin: 0;
+    border-radius: 0;
     border: none;
     text-align: start;
     text-transform: inherit;
@@ -16,4 +17,10 @@
     font-weight: inherit;
     background: none;
     color: inherit;
+}
+
+.gridHeader button:hover {
+    color: var(--clr-secondary-text);
+    background: none;
+    box-shadow: none;
 }
