--- a/src/Renderer/Fundamentals/Surface/Surface.css
+++ b/src/Renderer/Fundamentals/Surface/Surface.css
@@ -1,9 +1,16 @@
 .surface {
     width: 100%;
-    padding: 20px;
     border-radius: 10px;
-    border: 2px solid rgb(from var(--clr-tertiary-text) r g b / 0.125);
+    border: 2px solid rgba(255, 255, 255, 0.1);
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: var(--shd-tiny), var(--shd-soft);
     overflow: hidden;
+}
+
+.surface.padded {
+    padding: 20px;
+}
+
+.surface.unpadded {
+    padding: 0;
 }
