--- a/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
+++ b/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
@@ -2,12 +2,12 @@
     display: contents;
     text-transform: uppercase;
     font-weight: bold;
+    line-height: 1.5;
     user-select: none;
 }
 
 .gridHeader button {
     appearance: none;
-    padding: 0;
     margin: 0;
     border-radius: 0;
     border: none;
@@ -23,4 +23,11 @@
     color: var(--clr-secondary-text);
     background: none;
     box-shadow: none;
+}
+
+.gridHeader > * {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: inherit;
 }
