--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,6 @@
     scrollbar-width: thin;
 }
 
-.disabled,
 :disabled {
     opacity: 0.5;
     filter: saturate(0.5);
@@ -75,14 +74,6 @@
     background-color: var(--clr-tertiary-highlight);
 }
 
-input:hover,
-select:hover,
-textarea:hover,
-label:hover,
-button:hover {
-    cursor: pointer;
-}
-
 label {
     display: flex;
     flex-direction: row;
@@ -103,9 +94,17 @@ button {
     line-height: 1.25;
 }
 
-input:hover,
-select:hover,
-textarea:hover {
+input:hover:not(:disabled),
+select:hover:not(:disabled),
+textarea:hover:not(:disabled),
+label:hover:not(:disabled),
+button:hover:not(:disabled) {
+    cursor: pointer;
+}
+
+input:hover:not(:disabled),
+select:hover:not(:disabled),
+textarea:hover:not(:disabled) {
     border: 2px solid rgb(from var(--clr-tertiary-text) r g b / 0.75);
 }
 
@@ -116,7 +115,7 @@ button {
     border-radius: 20px;
 }
 
-button:hover {
+button:hover:not(:disabled) {
     background-color: rgb(from var(--clr-tertiary-text) r g b / 0.75);
     box-shadow:
         inset 0 0 16px var(--clr-tertiary-text),
@@ -139,7 +138,7 @@ a:visited {
     outline-offset: 2px;
 }
 
-a:hover,
+a:hover:not(:disabled),
 a:active {
     color: var(--clr-secondary-text);
 }
