--- a/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
+++ b/src/Renderer/Fundamentals/Grid/GridHeader/GridHeader.css
@@ -6,7 +6,7 @@
     user-select: none;
 }
 
-.gridHeader button {
+.gridHeader > button {
     appearance: none;
     margin: 0;
     border-radius: 0;
@@ -16,10 +16,11 @@
     font-size: inherit;
     font-weight: inherit;
     background: none;
+    box-shadow: none;
     color: inherit;
 }
 
-.gridHeader button:hover {
+.gridHeader > button:hover {
     color: var(--clr-secondary-text);
     background: none;
     box-shadow: none;
