--- a/public/style.css
+++ b/public/style.css
@@ -5,14 +5,14 @@
     --clr-page-text-light-secondary: rgb(192, 192, 192);
 
     --clr-primary-bkg: rgb(16, 48, 32);
-    --clr-primary-highlight: rgb(64, 255, 192);
-    --clr-primary-text: rgb(160, 224, 192);
+    --clr-primary-highlight: rgb(64, 255, 255);
+    --clr-primary-text: rgb(128, 192, 192);
     --clr-secondary-bkg: rgb(48, 32, 16);
-    --clr-secondary-highlight: rgb(255, 192, 64);
-    --clr-secondary-text: rgb(224, 192, 160);
+    --clr-secondary-highlight: rgb(255, 255, 64);
+    --clr-secondary-text: rgb(192, 192, 128);
     --clr-tertiary-bkg: rgb(32, 16, 48);
-    --clr-tertiary-highlight: rgb(192, 64, 255);
-    --clr-tertiary-text: rgb(192, 160, 224);
+    --clr-tertiary-highlight: rgb(255, 64, 255);
+    --clr-tertiary-text: rgb(192, 128, 192);
 
     --txt-size-check: 10px;
     --txt-size-small: 12px;
@@ -33,7 +33,7 @@
 
 * {
     box-sizing: border-box;
-    scrollbar-color: var(--clr-tertiary-text) var(--clr-tertiary-bkg);
+    scrollbar-color: var(--clr-primary-text) rgba(0, 0, 0, 0.25);
     scrollbar-width: thin;
 }
 
@@ -48,7 +48,7 @@
 }
 
 :focus-visible {
-    outline: 2px solid var(--clr-secondary-highlight);
+    outline: 2px solid var(--clr-tertiary-highlight);
 }
 
 ::-webkit-scrollbar {
@@ -57,21 +57,20 @@
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: var(--clr-tertiary-text);
+    background-color: var(--clr-primary-text);
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--clr-tertiary-text);
+    background-color: var(--clr-primary-text);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--clr-tertiary-text);
-    box-shadow: inset 0 0 0 1px var(--clr-tertiary-bkg);
+    background-color: var(--clr-primary-text);
     transition: background-color var(--anim-duration);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--clr-tertiary-highlight);
+    background-color: var(--clr-primary-highlight);
 }
 
 label {
@@ -81,14 +80,14 @@ label {
     gap: 10px;
 }
 
-input,
+input:not([type="range"]),
 select,
 textarea,
 button {
     color: var(--clr-page-text-light);
     background-color: black;
     box-shadow: var(--shd-tiny);
-    border: 2px solid rgb(from var(--clr-tertiary-text) r g b / 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.25);
     padding: 5px;
     font-size: 1em;
     line-height: 1.25;
@@ -105,21 +104,21 @@ button:hover:not(:disabled) {
 input:hover:not(:disabled),
 select:hover:not(:disabled),
 textarea:hover:not(:disabled) {
-    border: 2px solid rgb(from var(--clr-tertiary-text) r g b / 0.75);
+    border: 2px solid rgb(from var(--clr-primary-highlight) r g b / 0.75);
 }
 
 button {
     padding-inline: 20px;
-    background-color: rgb(from var(--clr-tertiary-text) r g b / 0.5);
+    background-color: rgb(from var(--clr-primary-text) r g b / 0.5);
     border: 2px solid transparent;
     border-radius: 20px;
 }
 
 button:hover:not(:disabled) {
-    background-color: rgb(from var(--clr-tertiary-text) r g b / 0.75);
+    background-color: rgb(from var(--clr-primary-highlight) r g b / 0.5);
     box-shadow:
-        inset 0 0 16px var(--clr-tertiary-text),
-        0 0 16px var(--clr-tertiary-text);
+        inset 0 0 0 1px rgb(from var(--clr-primary-highlight) r g b / 1),
+        0 0 16px rgb(from var(--clr-primary-highlight) r g b / 1);
 }
 
 input[type="range"],
@@ -133,14 +132,14 @@ input[type="number"] {
 
 a,
 a:visited {
-    color: var(--clr-tertiary-text);
+    color: var(--clr-primary-text);
     text-decoration: none;
     outline-offset: 2px;
 }
 
 a:hover:not(:disabled),
 a:active {
-    color: var(--clr-secondary-text);
+    color: var(--clr-primary-highlight);
 }
 
 body {
@@ -153,11 +152,8 @@ body {
     font-size: 16px;
     line-height: 1.25;
 
-    --c1: rgba(8, 16, 32, 0.5);
-    --c2: rgba(0, 8, 16, 0.75);
-
-    background-color: var(--clr-tertiary-bkg);
-    background-image: radial-gradient(transparent 33%, var(--c1)), radial-gradient(transparent 10%, var(--c2));
+    background-color: rgba(48, 40, 32, 1);
+    background-image: radial-gradient(transparent 33%, rgba(0, 0, 0, 0.5));
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
